--- a/helloworld.yml
+++ b/helloworld.yml
@@ -7,4 +7,4 @@
   - name: Hello World!
     shell: echo "Hi! Tower is working."
   - name: install vim package
-    yum: name=vim state=present
+    yum: name=vim state=present become=true
