--- a/helloworld.yml
+++ b/helloworld.yml
@@ -5,6 +5,8 @@
   - name: Hello World!
     shell: echo "Hi! Tower is working."
   - name: uninstall vim package
-    yum: name=vim state=absent become=true
+    yum: name=vim state=absent 
+    become: true
   - name: uninstall yum utils package
-    yum: name=yum-utils state=absent become=true
+    yum: name=yum-utils state=absent
+    become: true
